--- a/style.css
+++ b/style.css
@@ -25,27 +25,121 @@ p, h1, h2, h3, h4, h5, h6 {
 
 /* GENERAL */
 section.main {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     display: flex;
-    gap: 30px;
-    padding: 30px;
-    font-family: sans-serif;
+    justify-content: center;
 }
-h2 {
-    margin-top: 24px;
-    margin-bottom: 7px;
+.wrapper {
+    width: 900px;
+    max-width: 900px;
 }
 
 /* TABLE */
 table {
-    border-collapse: collapse;
+    width: 100%;
 }
-th, td {
-    padding: 5px 15px 5px 10px;
-    border: 1px solid #CCC;
-    text-align: left;
+svg.trash-icon {
+    stroke: #AAA;
+    fill: none;
+    width: 20px;
+    opacity: 0%;
+}
+svg.trash-icon:active {
+    stroke: #666;
+    fill: none;
+    width: 20px;
+}
+tr:hover>td>button>svg.trash-icon {
+    opacity: 100%;
+}
+svg.plus-icon {
+    stroke: #AAA;
+    fill: none;
+    width: 20px;
+}
+svg.plus-icon:active {
+    stroke: #666;
+    fill: none;
+    width: 20px;
 }
 
-/* FORM */
-form>div {
-    margin-bottom: 10px;
+/* FORM RESET */
+input {
+    -webkit-appearance: none;
+}
+input, label, select, button, textarea {
+	margin:0;
+	border:0;
+	padding:0;
+	display:inline-block;
+	vertical-align:middle;
+	white-space:normal;
+	background:none;
+	line-height:1;
+}
+input:focus, select:focus {
+	outline:0;
+}
+select {
+    margin-left: -4px;
+}
+select option {
+    padding: 0;
+    color: inherit;
+}
+button, select {
+    cursor: pointer;
+}
+
+/* ADD BOOK FORM */
+.add-book {
+    background: rgba(0, 0, 0, 0.01);
+}
+.add-book input {
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    padding: 6px 7px;
+    background: white;
+    width: 100%;
+}
+.add-book input:focus {
+    border: 1px solid rgba(0, 0, 255, 0.4);
+    outline: 2px solid rgba(0, 0, 255, 0.1);
+}
+.collapse {
+    visibility: collapse;
+}
+
+/* HEADER */
+.header {
+    margin-top: 20px;
+    padding: 10px 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* ADD BOOK BUTTON */
+.add-book-btn {
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    background: rgba(0, 0, 255, 0.7);
+    color: white;
+    padding: 11px 16px;
+    align-self: center;
+}
+.add-book-btn:active {
+    background: rgba(0, 0, 255, 0.8);
+}
+svg.book-icon {
+    stroke: rgba(255, 255, 255, 0.7);
+    fill: none;
+    width: 20px;
+    margin-right: 7px;
+}
+svg.book-icon:active {
+    stroke: #666;
+    fill: none;
+    width: 20px;
 }
