--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ svg.trash-icon {
     opacity: 0%;
 }
 svg.trash-icon:active {
-    stroke: #666;
+    stroke: black;
     fill: none;
     width: 20px;
 }
@@ -53,13 +53,13 @@ tr:hover>td>button>svg.trash-icon {
     opacity: 100%;
 }
 svg.plus-icon {
-    stroke: #AAA;
-    fill: none;
+    stroke: black;
+    fill: white;
     width: 20px;
 }
 svg.plus-icon:active {
-    stroke: #666;
-    fill: none;
+    stroke: white;
+    fill: black;
     width: 20px;
 }
 
@@ -92,22 +92,25 @@ button, select {
 }
 
 /* ADD BOOK FORM */
-.add-book {
-    background: rgba(0, 0, 0, 0.01);
-}
 .add-book input {
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid #E0E0E0;
     border-radius: 3px;
     padding: 6px 7px;
     background: white;
     width: 100%;
 }
 .add-book input:focus {
-    border: 1px solid rgba(0, 0, 255, 0.4);
-    outline: 2px solid rgba(0, 0, 255, 0.1);
+    border: 1px solid black;
+    outline: 3px solid rgba(0, 0, 0, 0.2);
 }
-.collapse {
-    visibility: collapse;
+
+.add-book input.error {
+    border: 1px solid red;
+}
+
+.add-book input.error:focus {
+    border: 1px solid red;
+    outline: 3px solid rgba(255, 0, 0, 0.2);
 }
 
 /* HEADER */
@@ -117,29 +120,4 @@ button, select {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-/* ADD BOOK BUTTON */
-.add-book-btn {
-    display: flex;
-    align-items: center;
-    border-radius: 5px;
-    background: rgba(0, 0, 255, 0.7);
-    color: white;
-    padding: 11px 16px;
-    align-self: center;
-}
-.add-book-btn:active {
-    background: rgba(0, 0, 255, 0.8);
-}
-svg.book-icon {
-    stroke: rgba(255, 255, 255, 0.7);
-    fill: none;
-    width: 20px;
-    margin-right: 7px;
-}
-svg.book-icon:active {
-    stroke: #666;
-    fill: none;
-    width: 20px;
 }
